<resources>
    <string name="app_name">ReCycl</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_acc">Create Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="login_redirect_text">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text">Can\'t remember your password? Enter your email and you will receive a link to reset it. </string>
    <string name="forgot_password_button_text">Send password reset email</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_notification">Notifications</string>
    <string name="menu_search">Search</string>
    <string name="menu_feed">My Feed</string>
    <string name="menu_message">Messages</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="logout">Sign Out</string>
    <string name="log_out">Log Out</string>
    <string name="action_logout">Log out</string>
    <string name="placeholder">Placeholder text</string>
    <string name="item_name_hint">Item name</string>
    <string name="upload_button_text">Upload</string>
    <string name="clear_button_text">Clear</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_images">Upload Images</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_messages">You don\'t have any messages</string>
    <string name="profile_name">%1$s %2$s</string>
    <string name="profile_city_placeholder">Newcastle-Upon-Tyne, UK</string>
    <string name="profile_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="item_title_placeholder">Item Title</string>
    <string name="feed_view_bookmarks">View Bookmarks</string>
    <string name="upload_description">Enter a description of your item</string>
    <string name="upload_item_title">Upload Item</string>
    <string name="pick_image_input">Choose image source</string>
    <string name="login_button_text">Login</string>
    <string name="item_location_title">Location:</string>
    <string name="item_borrow_length_title">Borrow Length</string>
    <string name="item_description_title">Description:</string>
    <string name="item_category_title">Category:</string>
    <string name="user_location_prompt">Enter your town or city</string>
    <string name="user_description_prompt">Enter your bio</string>
    <string name="location_title">Location:</string>
    <string name="continue_button_text">Continue</string>
    <string name="profile_image">profile image</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address_found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="open_camera">Open Camera</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="repeat_password_error">Passwords do not match</string>
    <string name="email_error">Invalid email address</string>
    <string name="password_error">Password needs to be %1$d letters or longer</string>
    <string name="last_name_error">Invalid Last Name</string>
    <string name="first_name_error">Invalid First Name</string>
    <string name="no_items">There are currently no items available</string>
    <string name="item_description_error">Your item description should be between %1$d and %2$d characters long</string>
    <string name="item_location_error">Your item location should be between %1$d and %2$d characters long</string>
    <string name="profile_description_error">Your profile description should be between %1$d and %2$d characters long</string>

    <string name="login_password_error">Incorrect password</string>
    <string name="login_email_error">Incorrect email</string>
    <string name="signup_unsuccessful">Signup unsuccessful</string>
    <string name="my_profile">My Profile</string>
    <string name="my_feed">My Feed</string>
    <string name="profile_description">%1$s</string>
    <string name="item_name_error">Your item name should be between %1$d and %2$d characters long</string>
    <string name="item_start_date_error">Invalid start date</string>
    <string name="item_end_date_error">Invalid end date</string>
    <string name="invalid_item_description">Invalid item description</string>
    <string name="messages">Messages</string>
    <string name="add_item">Add Item</string>
    <string name="browse_items">Browse Items</string>
    <string name="loan_end_date_hint">Loan end date</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="item_location_hint">Where is the item located in your house?</string>
    <string name="select_category">Select Item Category</string>
    <string name="item_upload_unsuccessful">Item upload unsuccessful</string>
    <string name="items_to_donate">Items to Donate</string>
    <string name="view_donated_items">View donated items</string>
    <string name="items_donated">Items Donated</string>
    <string name="donated">Donated</string>
    <string name="upload_name_hint">Enter a name for your item</string>
    <string name="upload_photo_title">Item Photo</string>
    <string name="items_donated_total">%1$d</string>
    <string name="items_uploaded">Items Uploaded</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="notification_title">Sort your clutter!</string>
    <string name="notification_text">Time to sort through your stuff and find things to give away</string>
    <string name="reminder_set_time">Reminder set for %1$s every %2$s</string>
    <string name="reminder_not_set">No reminder set</string>
    <string name="reminder_day_title">Set day:</string>
    <string name="reminder_time_title">Set time:</string>
    <string name="reminder_prompt">Set a weekly reminder to help you organise through the things you need to give away.</string>
    <string name="select_time">Select Time</string>
    <string name="clear_reminder">Clear Reminder</string>
    <string name="action_notify_sort_items">com.recycl.action.DONATE_ITEMS</string>
    <string name="action_notify_reminder_reset">com.recycl.action.RESET_REMINDER</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="donation_error">Cannot change donation status</string>
    <string name="item_delete_success_title">Item Deleted</string>
    <string name="item_delete_success_text">This item has been removed from your list</string>
    <string name="item_delete_positive">OK</string>
    <string name="item_positive">OK</string>
    <string name="item_delete_error_text">This item could not be deleted</string>
    <string name="item_delete_error_title">Error</string>
    <string name="item_updated_success">Your item has been updated</string>
    <string name="item_edited_success_title">Item edited successfully</string>
    <string name="item_upload_success_title">Item uploaded successfully</string>
    <string name="item_upload_success">Your item has been added to your list</string>
    <string name="edit_item_button_text">Apply Changes</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="no_donated_items">You have not donated any items yet</string>
    <string name="no_items_uploaded">No items uploaded yet</string>
    <string name="item_edited_error_title">Error</string>
    <string name="item_update_error">Item could not be edited</string>
    <string name="password_reset_email_success">Email sent to: %1$s</string>
    <string name="password_reset_email_error">Unable to send email</string>
    <string name="login_unsuccessful">Incorrect email or password</string>
    <string name="item_edit_unsuccessful">Item could not be edited</string>
    <string name="no_image">You must upload a profile image</string>
    <string name="verification_email_sent">Verification email sent to: %1$s</string>

</resources>
