<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/uploadToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary"
        android:background="@color/background"
        android:theme="@style/ToolbarColouredBackArrow" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uploadPhotoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/upload_photo_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/uploadItemPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_upload_img"
                    android:src="@drawable/ic_upload_img" />


                <Button
                    android:id="@+id/uploadItemImageButton"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/upload_image"
                    android:textColor="@color/background"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/uploadItemNameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item_name_hint"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/uploadItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/upload_name_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/uploadItemCategoryTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item_category_title"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"/>
                <Spinner
                    android:id="@+id/uploadItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp" />


                <TextView
                    android:id="@+id/uploadItemLocationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item_location_title"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/uploadItemLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/item_location_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/uploadItemDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item_description_title"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/uploadItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/raleway"
                    android:gravity="top|start"
                    android:hint="@string/upload_description"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:scrollbars="vertical" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp">


                    <Button
                        android:id="@+id/resetItemButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/clear_button_text"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/uploadItemButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/upload_button_text"
                        android:textColor="@color/background"
                        style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
