<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.profile.ProfileFragment"
    android:background= "@color/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        tools:src="@drawable/ic_profile_green" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text= "@string/profile_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />



    <TextView
        android:id="@+id/profileDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway"
        android:textAlignment="center"
        android:text="@string/profile_description"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/items_uploaded"
                android:layout_weight="1"
                android:id="@+id/numberOfUploadedItemsTitle"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/items_donated_total"
                android:id="@+id/numberOfUploadedItems"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:textAlignment="viewEnd"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_marginBottom="32dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/items_donated"
                android:layout_weight="1"
                android:id="@+id/numberOfDonatedItemsTitle"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/items_donated_total"
                android:id="@+id/numberOfDonatedItems"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:textAlignment="viewEnd"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:id="@+id/openReminderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/set_reminder"
        android:textColor="@color/background"/>
</LinearLayout>
