<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="404dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="411dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="320dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password_button_text"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="347dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway"
        android:text="@string/forgot_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>